# CRA-Net

./: README.md
code_v1/: test.py  train_cd_emd.py
code_v1/models/: model.py
code_v1/pc_distance/: makefile
code_v1/utils/: layer_util.py  np_util.py  tf_util.py
code_v2/: train_cd_emd.py
code_v2/models/: model_tf2.py
code_v2/pc_distance/: makefile  tf_approxmatch.py
code_v2/tf_ops/: README.md  a_points_2d.npy  test.ipynb
code_v2/tf_ops/sample_group/: tf_sample_group.cpp  tf_sample_group.cu  tf_sample_group.py  tf_sample_group_compile.sh
code_v2/utils/: layer_util_tf2.py  np_util_tf2.py  tf_util_tf2.py
data/: data_gen.sh  format.py  laser_scan.sh  pcl_sample.sh  sample.py  scanpc_full.sh
data/genpc/src/: CMakeLists.txt  main.cpp  obj_scan.cpp  obj_scan.h  surface_construct.cpp  surface_construct.h
data/virtual_cam/src/: main.cpp  obj_scan.cpp  obj_scan.h
